Towards initial draft

--- a/index.html
+++ b/index.html
@@ -2,6 +2,34 @@
 layout: default
 ---
 
-<div class="home">
-  hello
-</div>
+<h1>What is Girls Do Hack?</h1>
+<p>Girls Do Hack is a one-day event designed to empower young women to consider STEM careers. On November 15, 2014, teams of girls will come to the Adler Planetarium to work with women in science, technology, engineering and math careers. Together they will explore the skills required to pursue and excel in a STEM career through a series of hand-on workshops.</p>
+
+<h2>Event Details</h2>
+<h5>About Girls Do Hack</h5>
+<p>Girls Do Hack is a one-day event designed to empower young women to consider STEM careers. On November 15, 2014, teams of girls will come to the Adler Planetarium to work with women in science, technology, engineering and math careers. Together they will explore the skills required to pursue and excel in a STEM career through a series of hand-on workshops.</p>
+
+<h5>On the Day</h5>
+<p>Each female STEM professional mentor will be paired with two youth participants. Together  each team will participate in workshops designed to highlight skills required in STEM careers. These workshops and activities will be developed by Adler Planetarium staff and partner organizations to reflect a cross-section of STEM careers, and may include developing mobile phone apps, prototyping and designing buildings, exoplanet detection, building robots and game design.</p>
+
+<p>Mentors and youth participants may register to participate in one of two cohorts. Each cohort will consist of 40 girls and 20 mentors.</p>
+
+<h5>Workshop Descriptions</h5>
+<p>STEM workshops at Girls Do Hack are designed to highlight the skills necessary to pursue and excel in a STEM career. In these workshops, designed by Adler Planetarium staff and community partner organizations, young women and their STEM mentors will discover together!</p>
+
+<h5>Getting to the Adler</h5>
+<p>Girls Do Hack is easily accessible by car, public transport, bike or foot! For more details please visit the '<a href="http://www.adlerplanetarium.org/getting-here/">Getting There</a>' page on the <a href="http://www.adlerplanetarium.org/">Adler Planetarium website</a>.</p>
+
+<h2>Sponsorship</h2>
+<p>We invite you to help support the event. Sponsorship provides recognition and may include additional benefits.</p>
+
+<h4>Sponsorship Options</h4>
+<b>Presenting Sponsor:</b> Teza<br>
+<b>Team Sponsor (send or sponsor a team):</b> $10,000<br>
+<b>Mentors Sponsor (send or sponsor mentors):</b> $5,000<br>
+<b>Supporter:</b> $2,000<br>
+
+<p>For sponsorship information, please contact Debra Rosenberg, Director of Corporate Relations, at 312.322.0824 or drosenberg@adlerplanetarium.org.</p>
+
+
+
