--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<a name="the-event"></a>
 <h1>What is Girls Do Hack?</h1>
 <p>Girls Do Hack is a one-day event designed to empower young women to consider STEM careers. On November 15, 2014, teams of girls will come to the Adler Planetarium to work with women in science, technology, engineering and math careers. Together they will explore the skills required to pursue and excel in a STEM career through a series of hand-on workshops.</p>
 
