Add registration link

--- a/participate.html
+++ b/participate.html
@@ -23,7 +23,7 @@ layout: default
 <h2>Youth Participants</h2>
 <p>Are you interested in robotics or discovering a new planet? Would you like to learn more about biology or web design? Girls Do Hack is designed for young women currently enrolled in 9th -11th grade in Chicago area high schools to explore STEM skills you already possess and learn about new ones through a series of fun workshops.</p>
 
-<p>On the day of the event you’ll be paired with another youth participant and a female mentor currently working in a STEM career. Together your team will experience three exciting STEM workshops.</p>
+<p>On the day of the event you’ll be paired with another youth participant and a female mentor currently working in a STEM career. Together your team will experience three exciting STEM workshops. <a href="https://docs.google.com/forms/d/1v8WWBd4LHnu4J9Te_ogdBTpL3hUAyrOTaoUNLQ2swns/viewform">Register here!</a></p>
 
 <p>Possible workshop topics include:</p>
 <ul>
