--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
 <p>We invite you to help support the event. Sponsorship provides recognition and may include additional benefits.</p>
 
 <h4>Sponsorship Options</h4>
-<b>Presenting Sponsor:</b> Teza<br>
+<b>Presenting Sponsor:</b> <a href="https://www.facebook.com/TezaTechnologies">Teza Technologies</a> and <a href="https://twitter.com/MishaMalyshev1">Misha Malyshev</a><br>
 <b>Team Sponsor (send or sponsor a team):</b> $10,000<br>
 <b>Mentors Sponsor (send or sponsor mentors):</b> $5,000<br>
 <b>Supporter:</b> $2,000<br>
