Corrected email address

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
 <b>Mentors Sponsor (send or sponsor mentors):</b> $5,000<br>
 <b>Supporter:</b> $2,000<br>
 
-<p>For sponsorship information, please contact Sara Hoopes, Director of Corporate, Foundation, and Government Relations, at 312.322.0824 or <a href='mailto:shoopes@adlerplanetarium.org'>hshoopes@adlerplanetarium.org</a><br/>.</p>  
+<p>For sponsorship information, please contact Sara Hoopes, Director of Corporate, Foundation, and Government Relations, at 312.322.0824 or <a href='mailto:shoopes@adlerplanetarium.org'>shoopes@adlerplanetarium.org</a><br/>.</p>  
 
 
 
