--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <a name="the-event"></a>
 <h1>What is Girls Do Hack?</h1>
-<p>Girls Do Hack is a one-day event designed to inspire and empower young women to consider STEM careers. On November 14, 2015, teams of girls will come to the Adler Planetarium to partner with women working in the fields of science, technology, engineering and math. Together they will explore the skills required to pursue and excel in a STEM career through a series of hands-on, mids-on workshops and activities.</p>
+<p>Girls Do Hack is a one-day event designed to inspire and empower young women to consider STEM careers. On November 14, 2015, teams of girls will come to the Adler Planetarium to partner with women working in the fields of science, technology, engineering and math. Together they will explore the skills required to pursue and excel in a STEM career through a series of hands-on, minds-on workshops and activities.</p>
 
 <h2>Event Details</h2>
 <h5>On the Day</h5>
