Updated Header image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,23 @@ layout: default
 <p>Girls Do Hack is easily accessible by car, public transport, bike or foot! For more details please visit the '<a href="http://www.adlerplanetarium.org/getting-here/">Getting There</a>' page on the <a href="http://www.adlerplanetarium.org/">Adler Planetarium website</a>.</p>
 
 <h2>Sponsorship</h2>
-<p>We invite you to help support Girls Do Hack. Sponsorship provides recognition and may include additional benefits.</p>
+
+<p>The Adler invites you to help support Girls Do Hack. Sponsorship provides recognition and may include additional benefits.</p>
+
+<h4>Why Teza Chooses to Sponsor Girls Do Hack</h4>
+
+<blockquote class="sponsorship">
+	<img src="images/malyshev.jpg">
+	&ldquo;As CEO of Teza Technologies, a science and technology-driven global quantitative trading business, I recognize the need to encourage youth to explore their interest in STEM fields. It is critical to provide social and extracurricular activities in math and science, especially for girls, in order to increase the number of women studying STEM and pursuing related careers. Adler Planetarium’s Girls Do Hack is an exemplary effort to advance this important cause, and we are proud to have Teza Technologies serve as the presenting sponsor of this event.&rdquo;
+<cite>-	<a href="http://mishamalyshev.com/"</a>Misha Malyshev</a></cite>
+</blockquote>
+
+<p>More info about Misha Malyshev:</p>
+<ul>
+<li><a href="http://www.adlerplanetarium.org/blogs/gdh2014-misha-malyshev">Girls Do Hack Sponsor Perspective: Misha Malyshev</a></li>
+<li><a href="https://www.crunchbase.com/person/misha-malyshev">Teza CEO Misha Malyshev</a> – <a href="http://www.afterschoolallstars.org/misha-malyshev/">Biography</a></li>
+</ul>
+
 
 <h4>Sponsorship Options</h4>
 <b>Presenting Sponsor:</b> <a href="https://www.facebook.com/TezaTechnologies">Teza Technologies</a> and <a href="https://twitter.com/MishaMalyshev1">Misha Malyshev</a><br>
