--- a/participate.html
+++ b/participate.html
@@ -16,7 +16,7 @@ layout: default
   <li>(Optional) Complete an Adler Planetarium Volunteer Form</li>
 </ul>
 
-<p><!--<a href="https://docs.google.com/a/zooniverse.org/forms/d/1iZ7zvR86WFjnBabi6DgebcQh7IFZHvKE8_Z7q9JDIKs/viewform"> -->Registration begins 10/1/2015.</a></p>
+<p> <a href="https://docs.google.com/a/zooniverse.org/forms/d/1iZ7zvR86WFjnBabi6DgebcQh7IFZHvKE8_Z7q9JDIKs/viewform">Register to be a STEM mentor!</a></p>
 
 <p><i>Preference will be given to individuals committing to becoming an Adler STEM Mentor, an ongoing role with Adler youth programs. For more information on becoming an Adler STEM mentor please visit http://www.adlerplanetarium.org/volunteers.</i></p>
 
@@ -24,7 +24,7 @@ layout: default
 <h2>Youth Participants</h2>
 <p>Are you interested in robotics or discovering a new planet? Would you like to learn more about biology or web design? Girls Do Hack is designed for young women currently enrolled in 9th -11th grade in Chicago area high schools to explore STEM skills you already possess and learn about new ones through a series of fun workshops.</p>
 
-<p>On the day of the event you’ll be paired with another youth participant and a female mentor currently working in a STEM career. Together your team will experience three exciting STEM workshops. <!-- <a href="https://docs.google.com/a/zooniverse.org/forms/d/15DdbgjcNe1DMS3kyAlCXU9bHqmwdgCO_IlzSA27rHm4/viewform">-->Registration opens on 10/1/2015!</a></p> 
+<p>On the day of the event you’ll be paired with another youth participant and a female mentor currently working in a STEM career. Together your team will experience three exciting STEM workshops. <a href="https://docs.google.com/a/zooniverse.org/forms/d/15DdbgjcNe1DMS3kyAlCXU9bHqmwdgCO_IlzSA27rHm4/viewform">Register now!</a></p> 
 
 <p>Possible workshop topics include:</p>
 <ul>
