Youth Participant Registration Closed

--- a/participate.html
+++ b/participate.html
@@ -22,9 +22,11 @@ layout: default
 
 <a name="youth-participants"></a>
 <h2>Youth Participants</h2>
+<p style="font-weight: bold">All youth participant slots are now full.</p>
+
 <p>Are you interested in robotics or discovering a new planet? Would you like to learn more about biology or web design? Girls Do Hack is designed for young women currently enrolled in 9th -11th grade in Chicago area high schools to explore STEM skills you already possess and learn about new ones through a series of fun workshops.</p>
 
-<p>On the day of the event you’ll be paired with another youth participant and a female mentor currently working in a STEM career. Together your team will experience three exciting STEM workshops. <a href="https://docs.google.com/a/zooniverse.org/forms/d/15DdbgjcNe1DMS3kyAlCXU9bHqmwdgCO_IlzSA27rHm4/viewform">Register now!</a></p> 
+<p>On the day of the event you’ll be paired with another youth participant and a female mentor currently working in a STEM career. Together your team will experience three exciting STEM workshops. <!-- <a href="https://docs.google.com/a/zooniverse.org/forms/d/15DdbgjcNe1DMS3kyAlCXU9bHqmwdgCO_IlzSA27rHm4/viewform">Register now!</a></p> -->
 
 <p>Possible workshop topics include:</p>
 <ul>
